####################
Bazaar Release Notes
####################

.. contents:: List of Releases
   :depth: 1

bzr 2.2.1
#########

:Codename: ??
:2.2.1: NOT RELEASED YET

Compatibility Breaks
********************

Bug Fixes
*********

* ``bzr add SYMLINK/FILE`` now works properly when the symlink points to a
  previously-unversioned directory within the tree: the directory is
  marked versioned too.  
  (Martin Pool, #192859)

* CommitBuilder now uses the committer instead of _config.username to generate
  the revision-id.  (Aaron Bentley, #614404)

* Cope with Microsoft FTP server that returns reply '250 Directory
  created' when mkdir succeeds.  (Martin Pool, #224373)

* Fix ``AttributeError on parent.children`` when adding a file under a 
  directory that was a symlink in the previous commit.
  (Martin Pool, #192859)

* Only call ``setlocale`` in the bzr startup script on posix systems. This
  avoids an issue with the newer windows C runtimes used by Python 2.6 and
  later which can mangle bytestrings printed to the console.
  (Martin [gz], #631350)

Improvements
************

Documentation
*************

* Fix a lot of references in the docs to the old http://bazaar-vcs.org to
  the new http://bazaar.canonical.com or http://wiki.bazaar.canonical.com
  (John Arbash Meinel, #617503)

API Changes
***********

Internals
*********

* Remove used and broken code path in ``BranchInitHookParams.__repr__``.
  (Andrew Bennetts)

Testing
*******

bzr 2.2
#######

:Codename: La Hulpe
:2.2: 2010-08-06

This release marks the start of another long-term-stable series. From
here, we will only make bugfix releases on the 2.2 series (2.2.1, etc),
while 2.3 will become our new development series. The 2.0 and 2.1 series
will also continue to get bugfixes. (Currently 2.0 is planned to be
supported for another 6 months.)

This is primarily a bugfix and polish release over the 2.1 series, with
a large number of bugs fixed (>120), and some performance improvements.
